[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"
authors = ["Soroush Alinia <soroushalinia.wm@gmail.com>"]
description = "Cli todo application"
license = "MIT"


[dependencies]
chrono = "0.4"
clap = { version = "3.0.13", features = ["derive"] }
rusqlite = {version = "0.26.0", features = ["bundled"]}
dirs = "4.0"
